--- a/html/about.html
+++ b/html/about.html
@@ -53,7 +53,7 @@
                             <div data-f="GameDev" data-fAge="6" class="course_card">
                                 <img class="course_card_img" src="../img/Frame 1908.png" alt="Scratch" />
                                 <div class="course_description_container">
-                                    <div class="course_card_name">Scrath</div>
+                                    <div class="course_card_name">Scratch</div>
                                     <div class="course_card_description">Визуальная среда программирования, которая
                                         позволяет детям создавать
                                         собственные анимированные интерактивные игры и проекты.</div>
