--- a/html/profile.html
+++ b/html/profile.html
@@ -65,18 +65,7 @@
                         <h1 class="heading">Пётр Петрович</h1>
                         <p>Возвраст: 19</p>
                         <p>Актуальные курсы: Курс: Разработчик</p>
-                        <div class="info_person_box_content_action">
-
-                            <details>
-                                <summary>Информация о курсе</summary>
-                                Визуальная среда программирования, которая позволяет детям создавать собственные
-                                анимированные
-                                интерактивные игры и проекты.
-                            </details>
-
-                            <!-- <p class="info_person_box_content_action_text">Информация о курсе</p>
-                            <img src="../img/Chevron_right.png" alt="Chevron" class="info_person_box_content_action_img"> -->
-                        </div>
+                        <p class="info_person_box_content_action_text">Достижения:</p>
 
                     </div>
                 </div>
