--- a/html/main_page.html
+++ b/html/main_page.html
@@ -27,10 +27,14 @@
       </div>
     </section>
   </header>
-  <div class="upper_section">
-    <h1 class="upper_text">Учим программированию, созданию игр, digital - искусству и полезным вещам IT.</h1>
-    <img class="woman_img" src="../img/online_meetings.png" alt="woman">
+
+  <div class="back">
+    <div class="upper_section">
+      <h1 class="upper_text">Учим программированию, созданию игр, digital - искусству и полезным вещам IT.</h1>
+      <img class="woman_img" src="../img/online_meetings.png" alt="woman">
+    </div>
   </div>
+
 
   <main>
 
