--- a/html/registration.html
+++ b/html/registration.html
@@ -14,6 +14,20 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
+<header>
+  <section class="header">
+    <div class="header_menu">
+      <div class="header_menu_box">
+        <a href="../html/main_page.html" class="header_menu_box_link">Главная</a>
+        <a href="../html/courses.html" class="header_menu_box_link">Курсы</a>
+        <a href="../html/about.html" class="header_menu_box_link">О нас</a>
+      </div>
+
+      <a href="../html/login.html" class="header_menu_action">Войти</a>
+    </div>
+  </section>
+</header>
+
 <body>
   <main>
     <section class="main_container">
@@ -49,28 +63,43 @@
         </ol>
       </div>
 
+      <div class="footer_box footer_info">
+        <p class="footer_info_text">По вопросам обращайтесь в техническую поддержку.</p>
+        <div class="footer_box_div">
+          <div class="footer_box_div_content">
+            <img src="../img/Phone.svg" alt="Phone">
+            <p class="footer_info_text">+79688873621</p>
+          </div>
+
+          <div class="footer_box_div_content">
+            <img src="../img/Mail.svg" alt="Mail">
+            <p class="footer_info_text">codvolok@gmail.com</p>
+          </div>
+        </div>
+        <div class="footer_info_box">
+          <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
+              src="../img/VK_Compact_Logo (1) 1.svg" alt="VK"></a>
+
+          <a href="#" class="footer_info_box_item"><img src="../img/Logo 1.svg" alt="Telegram"></a>
+
+          <a href="https://instagram.com/it_class_vlk?igshid=YWJhMjlhZTc=" class="footer_info_box_item"><img
+              src="../img/instagram 1.svg" alt="Instagram"></a>
+        </div>
+      </div>
+
       <div class="footer_box">
-        <h2 class="footer_box_title">Контакты</h2>
+        <h2 class="footer_box_title">Местоположение</h2>
         <ol class="footer_box_list">
           <li><a
               href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
               class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
           </li>
+
+          <p class="footer_box_text">
+            Наш адрес: <br>
+            Школьная улица, 9А, Волоколамск, Московская область
+          </p>
         </ol>
-      </div>
-
-      <div class="footer_box footer_info">
-        <p class="footer_info_subtitle">По любым вопросам звоните или пишите в техническую поддержку.</p>
-        <p class="footer_info_text">
-          Наш адрес: <br>
-          Школьная улица, 9А, Волоколамск, Московская область
-        </p>
-        <div class="footer_info_box">
-          <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img src="../img/Rectangle 3.png"
-              alt="Vk"></a>
-
-          <a href="#" class="footer_info_box_item"><img src="../img/Rectangle 3.png" alt="Instagram"></a>
-        </div>
       </div>
     </section>
   </footer>
