убрал кружки, стрелки

--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../js/main_page.js"></script>
+    <script src="../js/about.js"></script>
     <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/headerM&footer.css">
@@ -47,7 +47,6 @@
 
             <div class="slider">
                 <div class="courses">
-                    <img src="../img/arrowleft2.svg" alt="Left" class="arrows" id="leftArrow">
                     <div class="courses_container">
                         <div id="coursesLine" class="courses_line">
                             <div data-f="GameDev" data-fAge="6" class="course_card">
@@ -169,19 +168,6 @@
                             </div>
                         </div>
                     </div>
-                    <img src="../img/arrowright2.svg" alt="Right" class="arrows" id="rightArrow">
-                </div>
-
-                <div class="main_container">
-                    <div class="slider_btns_line">
-                        <ul class="slider_btn_list">
-                            <li class="slider_btn slider_btn_active"></li>
-                            <li class="slider_btn"></li>
-                            <li class="slider_btn"></li>
-                            <li class="slider_btn"></li>
-                        </ul>
-                    </div>
-                </div>
             </div>
 
 
