--- a/html/about.html
+++ b/html/about.html
@@ -49,123 +49,12 @@
                 <div class="courses">
                     <div class="courses_container">
                         <div id="coursesLine" class="courses_line">
-                            <div data-f="GameDev" data-fAge="6" class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1908.png" alt="Scratch" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">Scratch</div>
-                                    <div class="course_card_description">Визуальная среда программирования, которая
-                                        позволяет детям создавать
-                                        собственные анимированные интерактивные игры и проекты.</div>
-                                </div>
-                            </div>
-                            <div data-f="DigitalArt" data-fAge="12" class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1909.png"
-                                    alt="HTML + CSS + JavaScript" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">HTML + CSS + JavaScript</div>
-                                    <div class="course_card_description">Создание динамической страницы сайта. Научим
-                                        программированию.</div>
-                                </div>
-                            </div>
-                            <div data-f="Dev" data-fAge="14" class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1910.png" alt="Python Start" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">Python Start</div>
-                                    <div class="course_card_description">Язык программирования, входящий в топ-10 самых
-                                        востребованных языков
-                                        программирования. Используется при создании сайтов и приложений.</div>
-                                </div>
-                            </div>
-                            <div data-f="Being" data-fAge="9" class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="PHP" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">PHP</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test1" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test1</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test2" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test2</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test3" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test3</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test4" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test4</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test5" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test5</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test6" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test6</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test7" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test7</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test8" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test8</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
-                            <div class="course_card">
-                                <img class="course_card_img" src="../img/Frame 1911.png" alt="test9" />
-                                <div class="course_description_container">
-                                    <div class="course_card_name">test9</div>
-                                    <div class="course_card_description">Интерпретируемый язык программирования общего
-                                        назначения, работающий
-                                        на серверной стороне. Используется во всех сферах IT.</div>
-                                </div>
-                            </div>
+                            <img class="course_card" src="../img/photo1.jpg" alt="photo1">
+                            <img class="course_card" src="../img/photo2.jpg" alt="photo2">
+                            <img class="course_card" src="../img/photo3.jpg" alt="photo3">
+                            <img class="course_card" src="../img/photo4.jpg" alt="photo4">
+                            <img class="course_card" src="../img/photo5.jpg" alt="photo5">
+                            
                         </div>
                     </div>
             </div>
