--- a/html/profile.html
+++ b/html/profile.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="../js/profile.js"></script>
     <link rel="stylesheet" href="../css/profile.css">
     <link rel="stylesheet" href="../css/headerM&footer.css">
     <link rel="stylesheet" href="../css/fonts.css">
@@ -66,7 +67,16 @@
                         <p>Возвраст: 19</p>
                         <p>Актуальные курсы: Курс: Разработчик</p>
                         <p class="info_person_box_content_action_text">Достижения:</p>
-
+                        <div class="achiv">
+                            <img src="../img/arrowleft2.svg" alt="Arrow">
+                            <div class="achiv_items">
+                                <img src="../img/achiv.svg" alt="Achievement">
+                                <img src="../img/achiv.svg" alt="Achievement">
+                                <img src="../img/achiv.svg" alt="Achievement">
+                                <img src="../img/achiv.svg" alt="Achievement">
+                            </div>
+                            <img src="../img/arrowright2.svg" alt="Arrow">
+                        </div>
                     </div>
                 </div>
 
