--- a/html/404.html
+++ b/html/404.html
@@ -54,7 +54,7 @@
                 <ol class="footer_box_list">
                     <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
                     <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
-                    <li><a href="#" class="footer_box_list_item">О нас</a></li>
+                    <li><a href="../html/about.html" class="footer_box_list_item">О нас</a></li>
                     <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
                 </ol>
             </div>
