--- a/html/current_courses.html
+++ b/html/current_courses.html
@@ -1,98 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="../js/current_courses.js"></script>
-    <link rel="stylesheet" href="../css/current_courses.css" />
-    <link rel="stylesheet" href="../css/headerM&footer.css" />
-    <link rel="stylesheet" href="../css/fonts.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script src="../js/current_courses.js"></script>
+  <link rel="stylesheet" href="../css/current_courses.css" />
+  <link rel="stylesheet" href="../css/headerM&footer.css" />
+  <link rel="stylesheet" href="../css/fonts.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-  <body>
-    <!-- HEADER -->
+</head>
 
-    <header>
-    </header>
+<body>
+  <!-- HEADER -->
 
-    <!-- HEADER -->
+  <header>
+    <section class="header">
+      <div class="header_menu">
+        <div class="header_menu_box">
+          <a href="../html/main_page.html" class="header_menu_box_link">Главная</a>
+          <a href="../html/courses.html" class="header_menu_box_link">Курсы</a>
+          <a href="../html/about.html" class="header_menu_box_link">О нас</a>
+        </div>
 
-    <!-- MAIN -->
+        <a href="../html/login.html" class="header_menu_action">Войти</a>
+      </div>
+    </section>
+  </header>
 
-    <main class="main_container">
-      <section class="idk_buttons_container">
-        <a href="profile.html"><img src="../img/Занятия/Frame 2064.svg" alt="Человек"></a>
-        <a href="current_courses.html"><img src="../img/Занятия/Frame 2066.svg" alt="Документ"></a>
-        <a href="courses.html"><img src="../img/Занятия/Frame 2067.svg" alt="Куб"></a>
-        <a href="profile.html"></a><img src="../img/Занятия/Frame 2068.svg" alt="Квадрат"></a>
-      </section>
+  <!-- HEADER -->
 
-      <section class="current_task_container">
-        <ul class="tasks">
-          <li class="task active_task">Лекция 1.1</li>
-          <li class="task">Практика 1.1</li>
-          <li class="task">Какие языки программирования бывают?</li>
-          <li class="task">Лекция 1.2</li>
-          <li class="task">Полезные материалы</li>
-          <li class="task">Домашнее задание</li>
-          <li class="task">Ответы на вопросы</li>
-          <li class="task">Практика 1.2</li>
-        </ul>
-      </section>
-      
-      <section class="task_content_container">
-        <div id="task_name" class="task_name">Лекция 1.1</div>
-        <p id="task_description" class="task_description">Ясность нашей позиции очевидна: социально-экономическое развитие обеспечивает актуальность благоприятных перспектив. С учётом сложившейся международной обстановки, базовый вектор развития однозначно определяет каждого участника как способного принимать собственные решения касаемо переосмысления внешнеэкономических политик. Учитывая ключевые сценарии поведения, социально-экономическое развитие обеспечивает актуальность направлений прогрессивного развития. Банальные, но неопровержимые выводы, а также действия представителей оппозиции могут быть функционально разнесены на независимые элементы. 
-          Являясь всего лишь частью общей картины, сторонники тоталитаризма в науке подвергнуты целой серии независимых исследований. Господа, высокое качество позиционных исследований говорит о возможностях первоочередных требований. 
-          Разнообразный и богатый опыт говорит нам, что глубокий уровень погружения требует от нас анализа соответствующих условий активизации. 
-          Не следует, однако, забывать, что высокое качество позиционных исследований требует анализа существующих финансовых и административных условий. А ещё стремящиеся вытеснить традиционное производство, нанотехнологии своевременно верифицированы. Лишь предприниматели в сети интернет разоблачены.Имеется спорная точка зрения, гласящая примерно следующее: элементы политического процесса объединены в целые кластеры себе подобных. Наше дело не так однозначно, как может показаться: экономическая повестка сегодняшнего дня обеспечивает широкому кругу (специалистов) участие в формировании приоретизации разума над эмоциями. В своём стремлении повысить качество жизни, они забывают, что начало повседневной работы по формированию позиции способствует повышению качества кластеризации усилий. Картельные сговоры не допускают ситуации, при которой представители современных социальных резервов, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут описаны максимально подробно. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: синтетическое тестирование не даёт нам иного выбора, кроме определения соответствующих условий активизации.</p>
-      </section>
-    </main> 
+  <!-- MAIN -->
 
-    <!-- MAIN -->
+  <main class="main_container">
+    <section class="idk_buttons_container">
+      <a href="profile.html"><img src="../img/Занятия/Frame 2064.svg" alt="Человек"></a>
+      <a href="current_courses.html"><img src="../img/Занятия/Frame 2066.svg" alt="Документ"></a>
+      <a href="courses.html"><img src="../img/Занятия/Frame 2067.svg" alt="Куб"></a>
+      <a href="profile.html"></a><img src="../img/Занятия/Frame 2068.svg" alt="Квадрат"></a>
+    </section>
 
-    <!-- FOOTER -->
+    <section class="current_task_container">
+      <ul class="tasks">
+        <li class="task active_task">Лекция 1.1</li>
+        <li class="task">Практика 1.1</li>
+        <li class="task">Какие языки программирования бывают?</li>
+        <li class="task">Лекция 1.2</li>
+        <li class="task">Полезные материалы</li>
+        <li class="task">Домашнее задание</li>
+        <li class="task">Ответы на вопросы</li>
+        <li class="task">Практика 1.2</li>
+      </ul>
+    </section>
 
-    <footer>
-      <section class="footer">
-          <div class="footer_box">
-              <h2 class="footer_box_title">Информация</h2>
-              <ol class="footer_box_list">
-                  <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
-                  <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
-                  <li><a href="#" class="footer_box_list_item">О нас</a></li>
-                  <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
-              </ol>
+    <section class="task_content_container">
+      <div id="task_name" class="task_name">Лекция 1.1</div>
+      <p id="task_description" class="task_description">Ясность нашей позиции очевидна: социально-экономическое развитие
+        обеспечивает актуальность благоприятных перспектив. С учётом сложившейся международной обстановки, базовый
+        вектор развития однозначно определяет каждого участника как способного принимать собственные решения касаемо
+        переосмысления внешнеэкономических политик. Учитывая ключевые сценарии поведения, социально-экономическое
+        развитие обеспечивает актуальность направлений прогрессивного развития. Банальные, но неопровержимые выводы, а
+        также действия представителей оппозиции могут быть функционально разнесены на независимые элементы.
+        Являясь всего лишь частью общей картины, сторонники тоталитаризма в науке подвергнуты целой серии независимых
+        исследований. Господа, высокое качество позиционных исследований говорит о возможностях первоочередных
+        требований.
+        Разнообразный и богатый опыт говорит нам, что глубокий уровень погружения требует от нас анализа соответствующих
+        условий активизации.
+        Не следует, однако, забывать, что высокое качество позиционных исследований требует анализа существующих
+        финансовых и административных условий. А ещё стремящиеся вытеснить традиционное производство, нанотехнологии
+        своевременно верифицированы. Лишь предприниматели в сети интернет разоблачены.Имеется спорная точка зрения,
+        гласящая примерно следующее: элементы политического процесса объединены в целые кластеры себе подобных. Наше
+        дело не так однозначно, как может показаться: экономическая повестка сегодняшнего дня обеспечивает широкому
+        кругу (специалистов) участие в формировании приоретизации разума над эмоциями. В своём стремлении повысить
+        качество жизни, они забывают, что начало повседневной работы по формированию позиции способствует повышению
+        качества кластеризации усилий. Картельные сговоры не допускают ситуации, при которой представители современных
+        социальных резервов, которые представляют собой яркий пример континентально-европейского типа политической
+        культуры, будут описаны максимально подробно. Высокий уровень вовлечения представителей целевой аудитории
+        является четким доказательством простого факта: синтетическое тестирование не даёт нам иного выбора, кроме
+        определения соответствующих условий активизации.</p>
+    </section>
+  </main>
+
+  <!-- MAIN -->
+
+  <!-- FOOTER -->
+
+  <footer>
+    <section class="footer">
+      <div class="footer_box">
+        <h2 class="footer_box_title">Информация</h2>
+        <ol class="footer_box_list">
+          <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
+          <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
+          <li><a href="../html/about.html" class="footer_box_list_item">О нас</a></li>
+          <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
+        </ol>
+      </div>
+
+      <div class="footer_box footer_info">
+        <p class="footer_info_text">По вопросам обращайтесь в техническую поддержку.</p>
+        <div class="footer_box_div">
+          <div class="footer_box_div_content">
+            <img src="../img/Phone.svg" alt="Phone">
+            <p class="footer_info_text">+79688873621</p>
           </div>
 
-          <div class="footer_box">
-              <h2 class="footer_box_title">Контакты</h2>
-              <ol class="footer_box_list">
-                  <li><a href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
-                          class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
-                  </li>
-              </ol>
+          <div class="footer_box_div_content">
+            <img src="../img/Mail.svg" alt="Mail">
+            <p class="footer_info_text">codvolok@gmail.com</p>
           </div>
+        </div>
+        <div class="footer_info_box">
+          <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
+              src="../img/VK_Compact_Logo (1) 1.svg" alt="VK"></a>
 
-          <div class="footer_box footer_info">
-              <p class="footer_info_subtitle">По любым вопросам звоните или пишите в техническую поддержку.</p>
-              <p class="footer_info_text">
-                  Наш адрес: <br>
-                  Школьная улица, 9А, Волоколамск, Московская область
-              </p>
-              <div class="footer_info_box">
-                  <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
-                          src="../img/Rectangle 3.png" alt="Vk"></a>
+          <a href="#" class="footer_info_box_item"><img src="../img/Logo 1.svg" alt="Telegram"></a>
 
-                  <a href="#" class="footer_info_box_item"><img src="../img/Rectangle 3.png" alt="Instagram"></a>
-              </div>
-          </div>
-      </section>
+          <a href="https://instagram.com/it_class_vlk?igshid=YWJhMjlhZTc=" class="footer_info_box_item"><img
+              src="../img/instagram 1.svg" alt="Instagram"></a>
+        </div>
+      </div>
+
+      <div class="footer_box">
+        <h2 class="footer_box_title">Местоположение</h2>
+        <ol class="footer_box_list">
+          <li><a
+              href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
+              class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
+          </li>
+
+          <p class="footer_box_text">
+            Наш адрес: <br>
+            Школьная улица, 9А, Волоколамск, Московская область
+          </p>
+        </ol>
+      </div>
+    </section>
   </footer>
-  </body>
+</body>
+
 </html>
