--- a/html/profile.html
+++ b/html/profile.html
@@ -64,7 +64,7 @@
                     <div class="info_person_box_content">
                         <h1 class="heading">Пётр Петрович</h1>
                         <p>Возвраст: 19</p>
-                        <p>Актуальные курсы: Курс: Разработчик</p>
+                        <p>Актуальные курсы: Scratch</p>
                         <p class="info_person_box_content_action_text">Достижения:</p>
 
                     </div>
@@ -99,7 +99,7 @@
                             <img src="../img/scratch2.png" alt="Course" class="course__box_image" />
                         </div>
 
-                        <h3 class="course_box_title">Scrath</h3>
+                        <h3 class="course_box_title">Scratch</h3>
                     </div>
 
                     <div class="course_box">
@@ -129,7 +129,7 @@
                 <ol class="footer_box_list">
                     <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
                     <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
-                    <li><a href="#" class="footer_box_list_item">О нас</a></li>
+                    <li><a href="../html/about.html" class="footer_box_list_item">О нас</a></li>
                     <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
                 </ol>
             </div>
